fixed top spacing on CTA2

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,4 +15,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 2em;
 }
